# gkernel2d

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindTBB.cmake
docs/: CMakeLists.txt
docs_infra/: Doxyfile.in  conf.py  index.rst  requirements.txt
input/: c12905_n313377.txt  c13155_n216863.txt  c156_n3334.txt  c178_n3952.txt  c3220_n85922.txt  c3239_n78555.txt  c355_n4927.txt  c3783_n69647.txt  c4657_n42329.txt  c47_n859.txt
python/visualizer/: visualizer.py
src/circuit_generator/: CMakeLists.txt  generator.cpp
src/common/: CMakeLists.txt
src/common/file_parser/: parser.cpp  parser.h
src/common/output_serializer/: serializer.cpp  serializer.h
src/visualizer/: CMakeLists.txt  main.cpp  matplotlibcpp.h
tests/common/: test.h  test.hpp
tests/integration/: CMakeLists.txt  pipeline.cpp
tests/perf/: CMakeLists.txt  bench_area_analysis.cpp  bench_circuit.cpp  bench_intersection.cpp  bench_intersections.cpp  bench_pipeline.cpp  bench_segment_intersection.cpp
tests/unit/: CMakeLists.txt  gkernel_tests.cpp  test_algorithm2.cpp  test_area_analysis.cpp  test_area_analyzer.cpp  test_circuit.cpp  test_containers.cpp  test_converter.cpp  test_geom_structures.cpp  test_intersection.cpp  test_pipeline.cpp  test_rbtree.cpp  test_segment_intersection.cpp  test_segments_layer_converter.cpp  test_two_segments_intersection.cpp
